# qtmiditrans

./: CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt  QLed.cpp  QLed.h  gui_midi.cpp  gui_midi.h  help_dialog.cpp  help_dialog.h  main.cpp  qtmidi.qrc
src/translations/: qtmidi_fr.ts
